<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Habit Name category -->
    <LinearLayout
        android:id="@+id/container_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_habit" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_habit_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_name"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Habit Started category -->
    <LinearLayout
        android:id="@+id/container_habit_started"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_started" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_started_date"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_started"
                android:inputType="date" />

        </LinearLayout>
    </LinearLayout>

    <!-- Notes category -->
    <LinearLayout
        android:id="@+id/container_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_notes" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Notes field -->
            <EditText
                android:id="@+id/edit_habit_notes"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_notes"
                android:inputType="textCapWords" />
        </LinearLayout>
    </LinearLayout>

    <!-- Frequency category -->
    <LinearLayout
        android:id="@+id/container_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_frequency" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Frequency drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_frequency"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Duration category -->
    <LinearLayout
        android:id="@+id/container_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_duration" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Duration field -->
            <EditText
                android:id="@+id/edit_habit_duration"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_habit_duration"
                android:inputType="number" />

            <!-- Duration Measurement Unit (min, hr) -->
            <Spinner
                android:id="@+id/spinner_duration_measurement"
                style="@style/EditorUnitsStyle"
                android:spinnerMode="dropdown" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>